--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
   - Home: index.md
   - Changelogs: changelogs.md
   - Algemene Plaatselijke Verordening: apv.md
+  - Overheid: overheid.md
   - Onderwereld: onderwereld.md
   - Streamen: streamen.md
   - Wetboek: 
